2011-03-07  Konstantinos Poulios  <logari81@googlemail.com>

	Bug #32482.

	* graphics.h.in (axes::properties::update_yaxislocation,
	axes::properties::update_yaxislocation):
	Hook update_ylabel_position and update_xlabel_position
	respectively.

2011-03-06  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.cc (axes::properties::update_xlabel_position,
	axes::properties::update_ylabel_position,
	axes::properties::update_zlabel_position,
	axes::properties::update_title_position):
	Determine position also for empty axes labels/titles in order
	to improve the tightinset calculation.
	(axes::properties::get_extent): Take position of empty strings
	into account for the calculation of axes extents.

2011-03-03  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.h.in (axes::properties::get_extent): Add new optional
	argument for ignoring the length of text objects.
	* graphics.cc (axes::properties::get_extent): Add the possibility
	of ignoring the length of text objects.
	(axes::properties::calc_tightbox): Take only text height into
	account for the calculation of the tight box.

2011-02-26  Konstantinos Poulios  <logari81@googlemail.com>

	* DLD-FUNCTIONS/__init_fltk__.cc (plot_window::plot_window):
	Move canvas allocation after the configuration of the menubar.
	(plot_window::show_menubar, plot_window::hide_menubar):
	Simplify source code.

2011-02-26  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/besselj.cc, DLD-FUNCTIONS/cellfun.cc,
	DLD-FUNCTIONS/filter.cc, DLD-FUNCTIONS/matrix_type.cc,
	DLD-FUNCTIONS/strfind.cc, DLD-FUNCTIONS/sub2ind.cc, bitfcns.cc,
	data.cc, error.cc, file-io.cc, graphics.cc, help.cc, input.cc,
	load-path.cc, load-save.cc, oct-parse.yy, ov-base.cc, ov-cell.cc,
	ov-class.cc, ov-fcn-handle.cc, ov-fcn-inline.cc, ov-flt-re-mat.cc,
	ov-struct.cc, ov-usr-fcn.cc, pr-output.cc, pt-mat.cc, sparse.cc,
	strfns.cc, syscalls.cc, sysdep.cc, toplev.cc, utils.cc, variables.cc:
	Rewrite error strings to use variables named in documentation.
